--- a/index.html
+++ b/index.html
@@ -1,39 +1,337 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nadeera Binoli</title>
-    <!-- css file -->
-    <link rel="stylesheet" href="style.css">
-    <!-- Font awsome -->
-    <script src="https://kit.fontawesome.com/d32321395d.js" crossorigin="anonymous"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Start your development with Meyawo landing page.">
+    <meta name="author" content="Devcrud">
+    <title>Nadeera Binoli | Front end developer</title>
+    <!-- font icons -->
+    <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
+    <!-- Bootstrap + Meyawo main styles -->
+    <link rel="stylesheet" href="assets/css/meyawo.css">
 </head>
-<body>
-    <section id="header" class="header">
-        <h1>Nadeera Binoli</h1>
-        <p>Front-end Developer</p>
-        <div class="links">
-            <a href="https://github.com/NadeeraBinoli">Github</a>
-            <a href="https://www.linkedin.com/in/nadeera-binoli-44747a253/">Linkedin</a>
+
+<body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
+
+    <!-- Page Navbar -->
+    <nav class="custom-navbar" data-spy="affix" data-offset-top="20">
+        <div class="container">
+            <a class="logo" href="#">NadB</a>
+            <ul class="nav">
+                <li class="item">
+                    <a class="link" href="#home">Home</a>
+                </li>
+                <li class="item">
+                    <a class="link" href="#about">About</a>
+                </li>
+                <li class="item">
+                    <a class="link" href="#portfolio">Portfolio</a>
+                </li>
+                <li class="item">
+                    <a class="link" href="#testmonial">Testmonial</a>
+                </li>
+                <li class="item">
+                    <a class="link" href="#blog">Blog</a>
+                </li>
+                <li class="item">
+                    <a class="link" href="#contact">Contact</a>
+                </li>
+            </ul>
+            <a href="javascript:void(0)" id="nav-toggle" class="hamburger hamburger--elastic">
+                <div class="hamburger-box">
+                    <div class="hamburger-inner"></div>
+                </div>
+            </a>
         </div>
-    </section>
-    <nav id="nav">
-        <li><a href="#header"><i class="fa-solid fa-house"></i> <span>Home</span> </a></li>
-        <li><a href="#about_me"><i class="fa-solid fa-user"></i> <span>About_Me</span> </a></li>
-        <li><a href="#projects"><i class="fa-solid fa-desktop"></i> <span>Projects</span> </a></li>
-        <li><a href="#contact"><i class="fa-solid fa-envelope"></i> <span>Contact</span> </a></li>
-    </nav>
-    <section id="about_me" class="about_me">
+    </nav><!-- End of Page Navbar -->
 
-    </section>
-    <section id="projects" class="projects">
+    <!-- page header -->
+    <header id="home" class="header">
+        <div class="header-content container">
+            <h1 class="header-title">
+                <span class="up">Hi!</span>
+                <span class="down">I'm Nadeera Binoli</span>
+            </h1>
+            <p class="header-subtitle">FRONTEND WEB DEVELOPER</p>
 
-    </section>
-    <section id="contact" class="contact">
+            <button class="btn btn-primary">Visit My Works</button>
+        </div>
+        <div class="headerImg">
+            <img src="assets/imgs/headerImg.png" alt="">
+        </div>
+    </header><!-- end of page header -->
 
-    </section>
-<script src="main.js"></script>
+    <!-- about section -->
+    <section class="section pt-0" id="about">
+        <!-- container -->
+        <div class="container text-center">
+            <!-- about wrapper -->
+            <div class="about">
+                <div class="about-img-holder">
+                    <img src="assets/imgs/man.png" class="about-img"
+                        alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                </div>
+                <div class="about-caption">
+                    <p class="section-subtitle">Who Am I ?</p>
+                    <h2 class="section-title mb-3">About Me</h2>
+                    <p>
+                        Hello! I’m Nadeera Binoli.
+                        <br>
+                        I’m  an enthusiastic and passionate web-developer  embarking on a long journey.
+                        <br>
+                        I enjoy creating things that users fall in love with. 
+                        <br>
+                        I consider myself  as a skilled, passionate, and  humble developer who is friendly,  collaborative,  and supportive.
+                    </p>
+                    <button class="btn-rounded btn btn-outline-primary mt-4">Download CV</button>
+                </div>
+            </div><!-- end of about wrapper -->
+        </div><!-- end of container -->
+    </section> <!-- end of about section -->
+
+    <!-- portfolio section  -->
+
+    <section class="section portfolios" id="portfolio">
+        <div class="wrapper portfolios-wrapper">
+          <div class="container text-center">
+            <p class="section-subtitle">What I Did ?</p>
+            <h6 class="section-title mb-6">Portfolio</h6>
+
+            <div class="row">
+                <div class="portfolios-item col-md-4">
+                    <img class="portfolios-image" src="/assets/imgs/project1.jpg"/>
+                    <h3 class="portfolios-name">Advice generator app</h3>
+                    <p class="portfolios-tags">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>JS</span>
+                    </p>
+                    <div class="portfolio-card-overlay">
+                        <div class="portfolios-links">
+                            <a href="https://nadeerabinoli.github.io/Advice-generator/" class="underline">View project</a>
+                            <a href="https://github.com/NadeeraBinoli/Advice-generator" class="underline">View Code</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolios-item col-md-4">
+                    <img class="portfolios-image" src="/assets/imgs/project2.jpg" alt="screenshot of design portfolio website"/>
+                    <h3 class="portfolios-name">Order-Summery</h3>
+                    <p class="portfolios-tags">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    </p>
+                    <div class="portfolio-card-overlay">
+                        <div class="portfolios-links">
+                            <a href="https://nadeerabinoli.github.io/order-summery/" class="underline">View project</a>
+                            <a href="https://github.com/NadeeraBinoli/order-summery" class="underline">View Code</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolios-item col-md-4">
+                    <img class="portfolios-image" src="/assets/imgs/project3.png" alt="screenshot of design portfolio website"/>
+                    <h3 class="portfolios-name">personal blog design</h3>
+                    <p class="portfolios-tags">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>JS</span>
+                    </p>
+                    <div class="portfolio-card-overlay">
+                        <div class="portfolios-links">
+                            <a href="https://nadeerabinoli.github.io/personal-blog/" class="underline">View project</a>
+                            <a href="https://github.com/NadeeraBinoli/personal-blog" class="underline">View Code</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="portfolios-item col-md-4">
+                    <img class="portfolios-image" src="/assets/imgs/project4.jpg" alt="screenshot of design portfolio website"/>
+                    <h3 class="portfolios-name">product preview card</h3>
+                    <p class="portfolios-tags">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    </p>
+                    <div class="portfolio-card-overlay">
+                        <div class="portfolios-links">
+                            <a href="https://nadeerabinoli.github.io/product-preview-card/" class="underline">View project</a>
+                            <a href="https://github.com/NadeeraBinoli/product-preview-card" class="underline">View Code</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolios-item col-md-4">
+                    <img class="portfolios-image" src="/assets/imgs/project5.jpg" alt="screenshot of design portfolio website"/>
+                    <h3 class="portfolios-name">Portfolio design</h3>
+                    <p class="portfolios-tags">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>JS</span>
+                    </p>
+                    <div class="portfolio-card-overlay">
+                        <div class="portfolios-links">
+                            <a href="https://nadeerabinoli.github.io/Aden-Waller/" class="underline">View project</a>
+                            <a href="https://github.com/NadeeraBinoli/Aden-Waller" class="underline">View Code</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolios-item col-md-4">
+                    <img class="portfolios-image" src="/assets/imgs/project6.jpeg" alt="screenshot of design portfolio website"/>
+                    <h3 class="portfolios-name">e-commerce website</h3>
+                    <p class="portfolios-tags">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>JS</span>
+                    </p>
+                    <div class="portfolio-card-overlay">
+                        <div class="portfolios-links">
+                            <a href="https://nadeerabinoli.github.io/ShopWithUs/" class="underline">View project</a>
+                            <a href="https://github.com/NadeeraBinoli/ShopWithUs" class="underline">View Code</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+    <!-- section -->
+    <section class="section-sm bg-primary">
+        <!-- container -->
+        <div class="container text-center text-sm-left">
+            <!-- row -->
+            <div class="row align-items-center">
+                <div class="col-sm offset-md-1 mb-4 mb-md-0">
+                    <h6 class="title text-light">Want to work with me?</h6>
+                    <p class="m-0 text-light">Always feel Free to Contact & Hire me</p>
+                </div>
+                <div class="col-sm offset-sm-2 offset-md-3">
+                    <button class="btn btn-lg my-font btn-light rounded">Hire Me</button>
+                </div>
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </section> <!-- end of section -->
+
+
+
+    <!-- blog section -->
+    <section class="section" id="blog">
+        <!-- container -->
+        <div class="container text-center">
+            <p class="section-subtitle">Recent Posts?</p>
+            <h6 class="section-title mb-6">Blog</h6>
+            <!-- blog-wrapper -->
+            <div class="blog-card">
+                <div class="blog-card-header">
+                    <img src="assets/imgs/img-1.jpg" class="blog-card-img"
+                        alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                </div>
+                <div class="blog-card-body">
+                    <h5 class="blog-card-title">Consectetur adipisicing elit</h6>
+
+                        <p class="blog-card-caption">
+                            <a href="#">By: Admin</a>
+                            <a href="#"><i class="ti-heart text-danger"></i> 234</a>
+                            <a href="#"><i class="ti-comment"></i> 123</a>
+                        </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet nesciunt qui sit velit
+                            delectus voluptates, repellat ipsum culpa id deleniti. Rerum debitis facilis accusantium
+                            neque numquam mollitia modi quasi distinctio.</p>
+
+                        <p><b>Necessitatibus nihil impedit! Ex nisi eveniet, dolor aliquid consequuntur repudiandae.</b>
+                        </p>
+                        <p>Magnam in repellat enim harum omnis aperiam! Explicabo illo, commodi, dolor blanditiis
+                            cupiditate harum nisi vero accusamus laudantium voluptatibus dolores quae obcaecati.</p>
+
+                        <a href="#" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
+                </div>
+            </div><!-- end of blog wrapper -->
+
+            <!-- blog-wrapper -->
+            <div class="blog-card">
+                <div class="blog-card-header">
+                    <img src="assets/imgs/img-2.jpg" class="blog-card-img"
+                        alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                </div>
+                <div class="blog-card-body">
+                    <h5 class="blog-card-title">Explicabo illo</h6>
+
+                        <p class="blog-card-caption">
+                            <a href="#">By: Admin</a>
+                            <a href="#"><i class="ti-heart text-danger"></i> 456</a>
+                            <a href="#"><i class="ti-comment"></i> 264</a>
+                        </p>
+
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit excepturi laborum enim,
+                            vitae ipsam atque eum, ad iusto consequuntur voluptas, esse doloribus. Perferendis porro
+                            quisquam vitae exercitationem aliquid, minus eos laborum repudiandae, cumque debitis iusto
+                            omnis praesentium? Laborum placeat sit adipisci illum tempore maxime, esse qui quae?
+                            Molestias excepturi corporis similique doloribus. Esse vitae earum architecto nulla non
+                            dolores illum at perspiciatis quod, et deleniti cupiditate reiciendis harum facere, delectus
+                            eum commodi soluta distinctio sit repudiandae possimus sunt. Ipsum, rem.</p>
+
+                        <a href="#" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
+                </div>
+            </div><!-- end of blog wrapper -->
+
+        </div><!-- end of container -->
+    </section><!-- end of blog section -->
+
+    <!-- contact section -->
+    <section class="section" id="contact">
+        <div class="container text-center">
+            <p class="section-subtitle">How can you communicate?</p>
+            <h6 class="section-title mb-5">Contact Me</h6>
+            <!-- contact form -->
+            <form action="" class="contact-form col-md-10 col-lg-8 m-auto">
+                <div class="form-row">
+                    <div class="form-group col-sm-6">
+                        <input type="text" size="50" class="form-control" placeholder="Your Name" required>
+                    </div>
+                    <div class="form-group col-sm-6">
+                        <input type="email" class="form-control" placeholder="Enter Email" requried>
+                    </div>
+                    <div class="form-group col-sm-12">
+                        <textarea name="comment" id="comment" rows="6" class="form-control"
+                            placeholder="Write Something"></textarea>
+                    </div>
+                    <div class="form-group col-sm-12 mt-3">
+                        <input type="submit" value="Send Message" class="btn btn-outline-primary rounded">
+                    </div>
+                </div>
+            </form><!-- end of contact form -->
+        </div><!-- end of container -->
+    </section><!-- end of contact section -->
+
+    <!-- footer -->
+    <div class="container">
+        <footer class="footer">
+            <p class="mb-0">Copyright
+                <script>document.write(new Date().getFullYear())</script> &copy; <a
+                    href="http://www.devcrud.com">DevCRUD</a> Distribution <a
+                    href="https://themewagon.com">ThemeWagon</a>
+            </p>
+            <div class="social-links text-right m-auto ml-sm-auto">
+                <a href="javascript:void(0)" class="link"><i class="ti-facebook"></i></a>
+                <a href="javascript:void(0)" class="link"><i class="ti-twitter-alt"></i></a>
+                <a href="javascript:void(0)" class="link"><i class="ti-google"></i></a>
+                <a href="javascript:void(0)" class="link"><i class="ti-pinterest-alt"></i></a>
+                <a href="javascript:void(0)" class="link"><i class="ti-instagram"></i></a>
+                <a href="javascript:void(0)" class="link"><i class="ti-rss"></i></a>
+            </div>
+        </footer>
+    </div> <!-- end of page footer -->
+
+    <!-- core  -->
+    <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
+    <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
+
+    <!-- bootstrap 3 affix -->
+    <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
+
+    <!-- Meyawo js -->
+    <script src="assets/js/meyawo.js"></script>
 
 </body>
+
 </html>
