--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
             <div class="row">
                 <div class="portfolios-item col-md-4">
-                    <img class="portfolios-image" src="/assets/imgs/project1.jpg"/>
+                    <img class="portfolios-image" src="assets/imgs/project1.jpg"/>
                     <h3 class="portfolios-name">Advice generator app</h3>
                     <p class="portfolios-tags">
                     <span>HTML</span>
@@ -116,7 +116,7 @@
                     </div>
                 </div>
                 <div class="portfolios-item col-md-4">
-                    <img class="portfolios-image" src="/assets/imgs/project2.jpg" alt="screenshot of design portfolio website"/>
+                    <img class="portfolios-image" src="assets/imgs/project2.jpg" alt="screenshot of design portfolio website"/>
                     <h3 class="portfolios-name">Order-Summery</h3>
                     <p class="portfolios-tags">
                     <span>HTML</span>
@@ -130,7 +130,7 @@
                     </div>
                 </div>
                 <div class="portfolios-item col-md-4">
-                    <img class="portfolios-image" src="/assets/imgs/project3.png" alt="screenshot of design portfolio website"/>
+                    <img class="portfolios-image" src="assets/imgs/project3.png" alt="screenshot of design portfolio website"/>
                     <h3 class="portfolios-name">personal blog design</h3>
                     <p class="portfolios-tags">
                     <span>HTML</span>
@@ -147,7 +147,7 @@
             </div>
             <div class="row">
                 <div class="portfolios-item col-md-4">
-                    <img class="portfolios-image" src="/assets/imgs/project4.jpg" alt="screenshot of design portfolio website"/>
+                    <img class="portfolios-image" src="assets/imgs/project4.jpg" alt="screenshot of design portfolio website"/>
                     <h3 class="portfolios-name">product preview card</h3>
                     <p class="portfolios-tags">
                     <span>HTML</span>
@@ -161,7 +161,7 @@
                     </div>
                 </div>
                 <div class="portfolios-item col-md-4">
-                    <img class="portfolios-image" src="/assets/imgs/project5.jpg" alt="screenshot of design portfolio website"/>
+                    <img class="portfolios-image" src="assets/imgs/project5.jpg" alt="screenshot of design portfolio website"/>
                     <h3 class="portfolios-name">Portfolio design</h3>
                     <p class="portfolios-tags">
                     <span>HTML</span>
@@ -176,7 +176,7 @@
                     </div>
                 </div>
                 <div class="portfolios-item col-md-4">
-                    <img class="portfolios-image" src="/assets/imgs/project6.jpeg" alt="screenshot of design portfolio website"/>
+                    <img class="portfolios-image" src="assets/imgs/project6.jpeg" alt="screenshot of design portfolio website"/>
                     <h3 class="portfolios-name">e-commerce website</h3>
                     <p class="portfolios-tags">
                     <span>HTML</span>
