--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     <header id="home" class="header">
         <div class="header-content container">
             <h1 class="header-title">
-                <span class="up">Hi!</span>
+                <span class="up">Hello there!</span>
                 <span class="down">I'm Nadeera Binoli</span>
             </h1>
-            <p class="header-subtitle">FRONTEND WEB DEVELOPER</p>
+            <p class="header-subtitle">FRONTEND DEVELOPER</p>
 
             <button class="btn btn-primary">Visit My Works</button>
         </div>
@@ -70,21 +70,14 @@
             <!-- about wrapper -->
             <div class="about">
                 <div class="about-img-holder">
-                    <img src="assets/imgs/man.png" class="about-img"
+                    <img src="assets/imgs/man.jpg" class="about-img"
                         alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                 </div>
                 <div class="about-caption">
                     <p class="section-subtitle">Who Am I ?</p>
                     <h2 class="section-title mb-3">About Me</h2>
                     <p>
-                        Hello! I’m Nadeera Binoli.
-                        <br>
-                        I’m  an enthusiastic and passionate web-developer  embarking on a long journey.
-                        <br>
-                        I enjoy creating things that users fall in love with. 
-                        <br>
-                        I consider myself  as a skilled, passionate, and  humble developer who is friendly,  collaborative,  and supportive.
-                    </p>
+                        Hello! I’m Nadeera Binoli. I am a Front-end developer based in Sri Lanka, currently studying for a Bachelor of Information Technology (BIT) at ESOFT Metro Campus.I'm in my second year and have a strong passion for creating websites. I love learning new things on my own, working for myself to improve my skills, and keeping up with the latest web trends. Check out my portfolio to see some of the projects I've worked on. Each one shows my dedication to making user-friendly and attractive websites. </p>
                     <button class="btn btn-outline-primary  mt-4">Download CV</button>
                 </div>
             </div><!-- end of about wrapper -->
