--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a class="link" href="#qualify">Qualifications</a>
                 </li>
                 <li class="item">
-                    <a class="link" href="#portfolio">Portfolio</a>
+                    <a class="link" href="#featured">Portfolio</a>
                 </li>
                 <li class="item">
                     <a class="link" href="#blog">Blog</a>
@@ -73,8 +73,68 @@
         </div>
     </header><!-- end of page header -->
 
+        <!-- featured section -->
+        <section class="section" id="featured">
+            <!-- container -->
+            <div class="container text-center">
+                <!-- featured wrapper -->
+                <div class="featured">
+                    <p class="section-subtitle">What are my best works ?</p>
+                    <h2 class="section-title mb-3">Featured Projects</h2>
+                    <p>Want to see some more projects?  <a href="#portfolio">Read more <i class="fa-solid fa-angles-right"></i></a> </p>
+                    <div class="row">
+                        <div class="portfolios-item col-md-4">
+                            <img class="portfolios-image" src="assets/imgs/project1.jpg"/>
+                            <h3 class="portfolios-name">Advice generator app</h3>
+                            <p class="portfolios-tags">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>JS</span>
+                            </p>
+                            <div class="portfolio-card-overlay">
+                                <div class="portfolios-links">
+                                    <a href="https://nadeerabinoli.github.io/Advice-generator/" class="underline">View project</a>
+                                    <a href="https://github.com/NadeeraBinoli/Advice-generator" class="underline">View Code</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portfolios-item col-md-4">
+                            <img class="portfolios-image" src="assets/imgs/project6.jpeg" alt="screenshot of design portfolio website"/>
+                            <h3 class="portfolios-name">e-commerce website</h3>
+                            <p class="portfolios-tags">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>JS</span>
+                            </p>
+                            <div class="portfolio-card-overlay">
+                                <div class="portfolios-links">
+                                    <a href="https://nadeerabinoli.github.io/ShopWithUs/" class="underline">View project</a>
+                                    <a href="https://github.com/NadeeraBinoli/ShopWithUs" class="underline">View Code</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portfolios-item col-md-4">
+                            <img class="portfolios-image" src="assets/imgs/project3.png" alt="screenshot of design portfolio website"/>
+                            <h3 class="portfolios-name">personal blog design</h3>
+                            <p class="portfolios-tags">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>JS</span>
+                            </p>
+                            <div class="portfolio-card-overlay">
+                                <div class="portfolios-links">
+                                    <a href="https://nadeerabinoli.github.io/personal-blog/" class="underline">View project</a>
+                                    <a href="https://github.com/NadeeraBinoli/personal-blog" class="underline">View Code</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!-- end of featured wrapper -->
+            </div><!-- end of container -->
+        </section> <!-- end of featured section -->
+
     <!-- about section -->
-    <section class="section pt-0" id="about">
+    <section class="section" id="about">
         <!-- container -->
         <div class="container text-center">
             <!-- about wrapper -->
