update qualifications section

--- a/index.html
+++ b/index.html
@@ -224,29 +224,20 @@
                 <div class="col-lg-6">
                     <h3 class="resume-title">Education</h3>
                     <div class="resume-item">
-                        <h4>Master of Fine Arts &amp; Graphic Design</h4>
-                        <h5>2015 - 2016</h5>
-                        <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                        <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
-                    </div>
-                    <div class="resume-item">
-                        <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-                        <h5>2010 - 2014</h5>
-                        <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                        <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+                        <h4>Bachelor of Information Technology Honours</h4>
+                        <h5>2022 - Present</h5>
+                        <p><em>ESOFT Metro Campus, Colombo, Sri Lanka</em></p>
+                        <p>Course which is held in four years, I'm currently on my 2nd year and expected to graduate in 2026. Expecting to start my specialization based on software engineering from next year.</p>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <h3 class="resume-title">Professional Experience</h3>
                     <div class="resume-item">
-                        <h4>Senior graphic design specialist</h4>
-                        <h5>2019 - Present</h5>
-                        <p><em>Experion, New York, NY </em></p>
+                        <h4>Contract Basis Developer</h4>
+                        <h5>2023 - Present</h5>
+                        <p><em>TechSeed Lanka pvt (ltd) </em></p>
                         <p>
-                            Lead in the design, development, and implementation of the graphic, layout, and production communication materials. <br>
-                            Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. <br>
-                            Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design. <br>
-                            Oversee the efficient use of production project budgets ranging from $2,000 - $25,000. <br>
+                           Working on contract based development projects under web development, had worked with HTML, CSS, JS, Bootstrap, PHP. 
                         </p>
                     </div>
                 </div>
