update blog section

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                         <h4>Bachelor of Information Technology Honours</h4>
                         <h5>2022 - Present</h5>
                         <p><em>ESOFT Metro Campus, Colombo, Sri Lanka</em></p>
-                        <p>Course which is held in four years, I'm currently on my 2nd year and expected to graduate in 2026. Expecting to start my specialization based on software engineering from next year.</p>
+                        <p>Course which is held in four years, I'm currently on my 2nd year (3.20 GPA) and expected to graduate in 2026. Expecting to start my specialization based on software engineering from next year.</p>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -361,53 +361,22 @@
                         alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                 </div>
                 <div class="blog-card-body">
-                    <h5 class="blog-card-title">Consectetur adipisicing elit</h6>
+                    <h5 class="blog-card-title">Keywords vs Reserve Words</h6>
 
                         <p class="blog-card-caption">
-                            <a href="#">By: Admin</a>
-                            <a href="#"><i class="fa-regular fa-heart text-danger"></i> 234</a>
-                            <a href="#"><i class="fa-regular fa-message"></i> 123</a>
+                            <a href="#">By: Nadeera Binoli</a>
+                            <a href="#"><i class="fa-regular fa-heart text-danger"></i> 2</a>
+                            <a href="#"><i class="fa-regular fa-message"></i> 1</a>
                         </p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet nesciunt qui sit velit
-                            delectus voluptates, repellat ipsum culpa id deleniti. Rerum debitis facilis accusantium
-                            neque numquam mollitia modi quasi distinctio.</p>
+                        <p>As a beginner developer, I sometimes feel a little misunderstanding when it comes to the basic terminologies of development. Among them, Keyword and Reserve words take the main place. These two words always sound like the same thing, but they are different in many ways.</p>
 
-                        <p><b>Necessitatibus nihil impedit! Ex nisi eveniet, dolor aliquid consequuntur repudiandae.</b>
+                        <p><b>Every keyword is a reserve word, but all reserve words are not keywords!!</b>
                         </p>
-                        <p>Magnam in repellat enim harum omnis aperiam! Explicabo illo, commodi, dolor blanditiis
-                            cupiditate harum nisi vero accusamus laudantium voluptatibus dolores quae obcaecati.</p>
+                        <p>Let's dig in to understand what is this paradox!</p>
 
                         <a href="#" class="blog-card-link">Read more <i class="fa-solid fa-angles-right"></i></a>
                 </div>
             </div><!-- end of blog wrapper -->
-
-            <!-- blog-wrapper -->
-            <div class="blog-card">
-                <div class="blog-card-header">
-                    <img src="assets/imgs/img-2.jpg" class="blog-card-img"
-                        alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
-                </div>
-                <div class="blog-card-body">
-                    <h5 class="blog-card-title">Explicabo illo</h6>
-
-                        <p class="blog-card-caption">
-                            <a href="#">By: Admin</a>
-                            <a href="#"><i class="fa-regular fa-heart text-danger"></i> 456</a>
-                            <a href="#"><i class="fa-regular fa-message"></i> 264</a>
-                        </p>
-
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit excepturi laborum enim,
-                            vitae ipsam atque eum, ad iusto consequuntur voluptas, esse doloribus. Perferendis porro
-                            quisquam vitae exercitationem aliquid, minus eos laborum repudiandae, cumque debitis iusto
-                            omnis praesentium? Laborum placeat sit adipisci illum tempore maxime, esse qui quae?
-                            Molestias excepturi corporis similique doloribus. Esse vitae earum architecto nulla non
-                            dolores illum at perspiciatis quod, et deleniti cupiditate reiciendis harum facere, delectus
-                            eum commodi soluta distinctio sit repudiandae possimus sunt. Ipsum, rem.</p>
-
-                        <a href="#" class="blog-card-link">Read more <i class="fa-solid fa-angles-right"></i></a>
-                </div>
-            </div><!-- end of blog wrapper -->
-
         </div><!-- end of container -->
     </section><!-- end of blog section -->
 
