--- a/index.html
+++ b/index.html
@@ -55,21 +55,17 @@
     <header id="home" class="header">
         <div class="header-content container">
             <h1 class="header-title">
-                <span class="up">Hello there!</span>
+                <span class="up">Ayubowan!</span>
                 <span class="down">I'm Nadeera Binoli</span>
             </h1>
             <p class="header-subtitle">FRONTEND DEVELOPER</p>
 
-            <button class="btn btn-primary">Visit My Works</button>
             <div class="socialIcons">
                 <a href="https://github.com/NadeeraBinoli"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.instagram.com/nadeera_binoli?igsh=dHJ2YWdpdHNqZmxl"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/nadeera-binoli-44747a253/"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="https://web.facebook.com/nadeera.binoli"><i class="fa-brands fa-facebook"></i></a>
             </div>
-        </div>
-        <div class="headerImg">
-            <img src="assets/imgs/headerImg.png" alt="">
         </div>
     </header><!-- end of page header -->
 
@@ -385,29 +381,48 @@
         <div class="container text-center">
             <p class="section-subtitle">How can you communicate?</p>
             <h6 class="section-title mb-5">Contact Me</h6>
-            <!-- contact form -->
-            <form action="" class="contact-form col-md-10 col-lg-8 m-auto">
-                <div class="form-row">
-                    <div class="form-group col-sm-6">
-                        <input type="text" size="50" class="form-control" placeholder="Your Name" required>
-                    </div>
-                    <div class="form-group col-sm-6">
-                        <input type="email" class="form-control" placeholder="Enter Email" requried>
-                    </div>
-                    <div class="form-group col-sm-12">
-                        <textarea name="comment" id="comment" rows="6" class="form-control"
-                            placeholder="Write Something"></textarea>
-                    </div>
-                    <div class="form-group col-sm-12 mt-3">
-                        <input type="submit" value="Send Message" class="btn btn-outline-primary">
+            <div class="contactInfo">
+                <div class="contact">
+                    <h5 class="fs-h4 mb-15 mt-25 fc-primary">Say hello</h5>
+                    <div class="cInfo">
+                            <a href="#" class="mb-5 display-inblock">
+                            <i class="fa-regular fa-envelope"></i>
+                            nadeerabinoli@gmail.com
+                            </a> <br>
+                            <a href="#" class="mb-5 display-inblock">
+                            <i class="fa-solid fa-phone"></i>
+                            +94 70 363 58 65 – Hotline 
                     </div>
                 </div>
-            </form><!-- end of contact form -->
+                <div class="contact">
+                    <h5 class="fs-h4 mb-15 mt-25 fc-primary">Follow Me</h5> 
+                    <div class="cInfo">
+                            <a href="#" class="display-inblock mr-10">
+                            <i class="fa-brands fa-facebook"></i>
+                            Facebook
+                            </a> 
+                            <a href="#" class="display-inblock mr-10">
+                            <i class="fa-brands fa-instagram"></i>
+                            Instagram
+                            </a> <br>
+                            <a href="#" class="display-inblock mr-10">
+                            <i class="fa-brands fa-linkedin"></i>
+                            linkedin
+                            </a> 
+                            <a href="#" class="display-inblock mr-10">
+                            <i class="fa-brands fa-github"></i>
+                            Github
+                            </a>
+                    </div>
+                </div>
+            </div>
         </div><!-- end of container -->
     </section><!-- end of contact section -->
 
     <!-- footer -->
-
+<footer>
+    <p> Design With Love By NadB <i class="fa-solid fa-heart"></i></p>
+</footer>
     <!-- end of page footer -->
 
     <!-- core  -->
