--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="about">
                 <div class="about-img-holder">
                     <img src="assets/imgs/man.jpg" class="about-img"
-                        alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        alt="">
                 </div>
                 <div class="about-caption">
                     <p class="section-subtitle">Who Am I ?</p>
@@ -353,8 +353,8 @@
             <!-- blog-wrapper -->
             <div class="blog-card">
                 <div class="blog-card-header">
-                    <img src="assets/imgs/img-1.jpg" class="blog-card-img"
-                        alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                    <img src="assets/imgs/blog1.jpg" class="blog-card-img"
+                        alt="">
                 </div>
                 <div class="blog-card-body">
                     <h5 class="blog-card-title">Keywords vs Reserve Words</h6>
