--- a/index.html
+++ b/index.html
@@ -229,11 +229,11 @@
                 <div class="col-lg-6">
                     <h3 class="resume-title">Professional Experience</h3>
                     <div class="resume-item">
-                        <h4>Contract Basis Developer</h4>
+                        <h4>Project Basis Developer</h4>
                         <h5>2023 - Present</h5>
                         <p><em>TechSeed Lanka pvt (ltd) </em></p>
                         <p>
-                           Working on contract based development projects under web development, had worked with HTML, CSS, JS, Bootstrap, PHP. 
+                           Working on Project based development projects under web development, had worked with HTML, CSS, JS, Bootstrap, PHP. 
                         </p>
                     </div>
                 </div>
