--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                         </p>
                         <p>Let's dig in to understand what is this paradox!</p>
 
-                        <a href="#" class="blog-card-link">Read more <i class="fa-solid fa-angles-right"></i></a>
+                        <a href="https://dev.to/nadeerabinoli/keywords-vs-reserved-words-in-java-whats-the-difference-1lc2" class="blog-card-link">Read more <i class="fa-solid fa-angles-right"></i></a>
                 </div>
             </div><!-- end of blog wrapper -->
         </div><!-- end of container -->
