--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
     <section class="section" id="blog">
         <!-- container -->
         <div class="container text-center">
-            <p class="section-subtitle">Recent Posts?</p>
+            <p class="section-subtitle"><a href="https://dev.to/nadeerabinoli">Recent Posts?</a></p>
             <h6 class="section-title mb-6">Blog</h6>
             <!-- blog-wrapper -->
             <div class="blog-card">
