--- a/index.html
+++ b/index.html
@@ -339,6 +339,23 @@
                         </div>
                     </div>
                 </div>
+                <div class="portfolios-item col-md-4">
+                    <img class="portfolios-image" src="assets/imgs/project7.png" alt="screenshot of design portfolio website"/>
+                    <h3 class="portfolios-name">Fresh Chef – Food and Beverages Delivering and Catering System</h3>
+                    <p class="portfolios-tags">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>JS</span>
+                    <span>PHP</span>
+                    <span>MySQL</span>
+                    <span>Git</span>
+                    </p>
+                    <div class="portfolio-card-overlay">
+                        <div class="portfolios-links">
+                            <a href="https://github.com/NadeeraBinoli/Fresh-Chef" class="underline">View Code</a>
+                        </div>
+                    </div>
+                </div>
             </div>
           </div>
         </div>
